attempt at fixing Favicon issue

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+      <link rel="shortcut icon" href="#">
       {% if title %}
       <title>{{ title }} - Class Scheduler</title>
       {% else %}
