--- a/app/templates/simple.html
+++ b/app/templates/simple.html
@@ -12,5 +12,12 @@
 <br>
 <br>
 
+<center>
+<div class="container">
+   <div class="row1">
+      <a class="btn btn-success" href="{{url_for('download')}}">Download</a>
+   </div>
+</div>
+</center>
 
 {% endblock %}
